# workshop2526

./: .gitignore
group1/: .gitignore  Makefile  README.md  sonar-project.properties
group1/.github/workflows/: ci-full.yml  ci.yml
group1/ansible/: ansible.cfg  inventory  playbook.yml
group1/ansible/tests/: protego_test.yml
group1/docker/: docker-compose.yml
group1/docker/app/: Dockerfile
group1/docker/nginx/: Dockerfile
group1/docs/: architecture.md  final_report.md  pra.md  pra_detailed.md  security.md
group1/monitoring/: prometheus.yml
group1/scripts/: backup.sh  cassandra_container_snapshot.sh  cassandra_restore_container.sh  cassandra_snapshot.sh  es_snapshot.sh  restore.sh  upload_backups_to_s3.sh
group1/terraform/: main.tf  outputs.tf  s3.tf  variables.tf  vpc.tf
group2/: README.md  requirements.txt
group2/notebooks/: character_recognition.ipynb  optimizer_benchmark.ipynb  text_analysis.ipynb  voice_recognition.ipynb
group2/reports/: advanced_analysis.csv  scientific_report.md
group2/scripts/: generate_images.py  prepare_texts.py
wigor-schedule-windows/: README.md  pyproject.toml  requirements.txt  setup.cfg
wigor-schedule-windows/.github/workflows/: ci.yml
wigor-schedule-windows/docs/: README_API.md  design.md  justification.md  security.md  testing.md
wigor-schedule-windows/packaging/: pyinstaller.spec
wigor-schedule-windows/src/: auth.py  config.py  gui.py  main.py  models.py  utils.py  wigor_client.py
wigor-schedule-windows/tests/: conftest.py  test_auth.py  test_utils.py  test_wigor_client.py
(+27 files in other folders)
