[tool.poetry]
name = "wigor-schedule-windows"
version = "0.1.0"
description = "A Windows application to retrieve and display the user's schedule from the Wigor API."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
tkinter = "*"  # or PyQt5 if you choose to use it
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"