[metadata]
name = wigor-schedule-windows
version = 0.1.0
description = A Windows application to retrieve and display your schedule using the Wigor API.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/wigor-schedule-windows
license = MIT

[options]
packages = find:
install_requires =
    requests
    tkinter  # or PyQt5 if using PyQt
    # Add any other dependencies here

[options.packages.find]
where = src

[tool:pytest]
addopts = --cov=src --cov-report=term-missing
python_files = test_*.py
python_classes = *Tests
python_functions = test_*